# course_work3

./: .gitignore  README.md  main.py  pyproject.toml
src/: classes.py  utils.py
tests/: .coverage  test_utils.py
