[tool.poetry]
name = "course_work3"
version = "0.1.0"
description = "Курсовая работа №3"
authors = ["Ivan Sushko <vaneksushko@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work3"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"